Change name of Stringarray

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
         <item>f</item>
     </string-array>
 
-    <string-array name="Intervall_neu">
+    <string-array name="Intervall">
         <item name="15 min">15 min</item>
         <item name="30 min">30 min</item>
         <item name="60 min">1 std</item>
@@ -55,7 +55,7 @@
         <item name="6 std">6 std</item>
     </string-array>
 
-    <string-array name="Intervall_neu_values">
+    <string-array name="Intervall_values">
         <item name="15 min">900000</item>
         <item name="30 min">1800000</item>
         <item name="60 min">3600000</item>
