--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="bar_title">Vertretungsplan</string>
     <string name="action_settings">Einstellungen</string>
     <string name="action_webview">Webseite</string>
-    <string name="Url1">http://www.mgg.karlsruhe.de/index.php/vertretungsplan</string>
+    <string name="vertretungsplan_url">http://www.mgg.karlsruhe.de/index.php/vertretungsplan</string>
     <string name="ur2">http://rickyy.lima-city.de/html/vertretungsplan.html</string>
     <string name="zuletztAbger">Zuletzt aktualisiert: %s</string>
     <string name="welcome_slide_title">Willkommen</string>
