Add "Feedback" button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="app_name">Vertretungsplan</string>
     <string name="bar_title">Vertretungsplan</string>
     <string name="action_settings">Einstellungen</string>
+    <string name="action_feedback">Feedback</string>
     <string name="action_webview">Webseite</string>
     <string name="vertretungsplan_url">http://www.mgg.karlsruhe.de/index.php/vertretungsplan</string>
+    <string name="feedback_url">https://goo.gl/forms/AeYT99ElhH7vzqAx1</string>
     <string name="ur2">http://rickyy.lima-city.de/html/vertretungsplan.html</string>
     <string name="zuletztAbger">Zuletzt aktualisiert: %s</string>
     <string name="welcome_slide_title">Willkommen</string>
