--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,13 @@
     <string name="notification_interval_title">Prüfintervall</string>
     <string name="notification_interval_summary">Bitte wähle das Zeitintervall, in welchem der Vertretungsplan geprüft werden soll</string>
 
+    <string name="choose_class_key">Klasse</string>
+    <string name="choose_class_title">Klasse</string>
+    <string name="choose_class_desc">Bitte wähle deine Klasse aus</string>
+    <string name="choose_classLayer_key">Klassenstufe</string>
+    <string name="choose_classLayer_title">Stufe</string>
+    <string name="choose_classLayer_desc">Bitte wähle deine Stufe aus</string>
+
     <string name="version">2.1.0</string>
     <integer name="versionNumber">15</integer>
 
