--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="welcome_slide_title">Willkommen</string>
     <string name="welcome_slide_descr">Vielen Dank, dass du diese App nutzt. Auf der folgenden Seite findest du einige Einstellungen, die du setzen solltest.</string>
+    <string name="welcome_slide_content_descr">App-Logo</string>
     <string name="settings_slide_title">@string/action_settings</string>
     <string name="settings_slide_descr">Bitte stelle deine Klasse ein!\nFalls du keine Benachrichtigungen wünschst, dann schalte sie oben aus!\nAlle Einstellungen kannst du später wieder ändern.</string>
     <string name="notification_setting_title">Benachrichtigungen</string>
@@ -41,6 +42,9 @@
 
     <string name="setting_past_days_title">Alte Tage zeigen</string>
     <string name="setting_past_days_summary">Sollen alte Daten noch angezeigt werden?</string>
+
+    <string name="settings_dialog_back">Zurück!</string>
+    <string name="settings_dialog_title">Intervall</string>
 
     <!-- Not Added yet :( -->
     <string name="cancelled">Entfällt</string>
