TASK: Rename string names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,12 +14,15 @@
     <string name="welcome_slide_title">Willkommen</string>
     <string name="welcome_slide_descr">Vielen Dank, dass du diese App nutzt. Auf der folgenden Seite findest du einige Einstellungen, die du setzen solltest.</string>
     <string name="welcome_slide_content_descr">App-Logo</string>
+
     <string name="settings_slide_title">@string/action_settings</string>
     <string name="settings_slide_descr">Bitte stelle deine Klasse ein!\nFalls du keine Benachrichtigungen wünschst, dann schalte sie oben aus!\nAlle Einstellungen kannst du später wieder ändern.</string>
-    <string name="notification_setting_title">Benachrichtigungen</string>
-    <string name="notification_setting_summary">Benachrichtigung bei Änderung des Vertretungsplans</string>
-    <string name="notification_interval_title">Prüfintervall</string>
-    <string name="notification_interval_summary">Bitte wähle das Zeitintervall, in welchem der Vertretungsplan geprüft werden soll</string>
+    <string name="settings_notification_title">Benachrichtigungen</string>
+    <string name="settings_notification_summary">Benachrichtigung bei Änderung des Vertretungsplans</string>
+    <string name="settings_notification_interval_title">Prüfintervall</string>
+    <string name="settings_notification_interval_summary">Bitte wähle das Zeitintervall, in welchem der Vertretungsplan geprüft werden soll</string>
+    <string name="settings_section_miscellaneous">Verschiedenes</string>
+    <string name="settings_showToday">Akt. Tag zeigen</string>
 
     <string name="choose_class_title">Klasse</string>
     <string name="choose_class_desc">Bitte wähle deine Klasse aus</string>
@@ -30,18 +33,16 @@
     <string name="version">2.1.0</string>
     <integer name="versionNumber">15</integer>
 
-    <string name="miscellaneous">Verschiedenes</string>
-    <string name="showToday">Akt. Tag zeigen</string>
     <string name="action_done">FERTIG</string>
 
     <string name="colored_cards_title">Farbige Karten</string>
     <string name="colored_cards_summary">Ausfälle in Übersicht farbig anzeigen</string>
 
-    <string name="setting_app_color_title">Farbgebung</string>
-    <string name="setting_app_color_summary">Wähle die Farbe der App</string>
+    <string name="settings_app_color_title">Farbgebung</string>
+    <string name="settings_app_color_summary">Wähle die Farbe der App</string>
 
-    <string name="setting_past_days_title">Alte Tage zeigen</string>
-    <string name="setting_past_days_summary">Sollen alte Daten noch angezeigt werden?</string>
+    <string name="settings_past_days_title">Alte Tage zeigen</string>
+    <string name="settings_past_days_summary">Sollen vergangene Tage noch angezeigt werden?</string>
 
     <string name="settings_dialog_back">Zurück!</string>
     <string name="settings_dialog_title">Intervall</string>
