--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Vertretungsplan</string>
-    <string name="bar_title">Vertretungsplan</string>
+    <string name="version">2.1.1</string>
+    <integer name="versionNumber">16</integer>
+    <string name="bar_title">@string/app_name</string>
+
     <string name="action_settings">Einstellungen</string>
     <string name="action_feedback">Feedback</string>
     <string name="action_website">Webseite</string>
@@ -10,6 +13,10 @@
     <string name="feedback_url">https://goo.gl/forms/AeYT99ElhH7vzqAx1</string>
     <string name="test_url">http://rickyy.lima-city.de/html/vertretungsplan.html</string>
     <string name="lastChecked">Zuletzt aktualisiert: %s</string>
+    <string name="placeholder_title">Titel</string>
+    <string name="placeholder_summary">Summary</string>
+    <string name="infoTitle">Info</string>
+    <string name="card_no_information">Keine Informationen!</string>
 
     <!-- Intro Slides Strings -->
     <string name="slide_welcome_title">Willkommen</string>
@@ -18,50 +25,46 @@
 
     <string name="slide_settings_title">@string/action_settings</string>
     <string name="slide_settings_descr">Bitte stelle deine Klasse ein!\nFalls du keine Benachrichtigungen wünschst, dann schalte sie oben aus!\nAlle Einstellungen kannst du später wieder ändern.</string>
+
+    <string name="slide_action_done">FERTIG</string>
     <!--  -->
 
+    <string name="settings_name">Einstellungen</string>
+    <string name="toast_settings_saved">Einstellungen übernommen!</string>
+
+    <!-- Class Settings Section -->
+    <string name="settings_section_class">Klasse</string>
+    <string name="settings_chooseClassLayer_title">Stufe</string>
+    <string name="settings_chooseClassLayer_desc">Bitte wähle deine Stufe aus</string>
+    <string name="settings_chooseClass_title">Klasse</string>
+    <string name="settings_chooseClass_desc">Bitte wähle deine Klasse aus</string>
+    <!--  -->
+
+    <!-- Miscellaneous Settings Section -->
+    <string name="settings_section_miscellaneous">Verschiedenes</string>
     <string name="settings_notification_title">Benachrichtigungen</string>
     <string name="settings_notification_summary">Benachrichtigung bei Änderung des Vertretungsplans</string>
     <string name="settings_notification_interval_title">Prüfintervall</string>
     <string name="settings_notification_interval_summary">Bitte wähle das Zeitintervall, in welchem der Vertretungsplan geprüft werden soll</string>
-    <string name="settings_section_miscellaneous">Verschiedenes</string>
-    <string name="settings_showToday">Akt. Tag zeigen</string>
+    <string name="settings_notification_interval_dialog_title">Intervall</string>
+    <string name="settings_notification_interval_dialog_back">Zurück!</string>
 
-    <string name="choose_class_title">Klasse</string>
-    <string name="choose_class_desc">Bitte wähle deine Klasse aus</string>
-    <string name="choose_classLayer_title">Stufe</string>
-    <string name="choose_classLayer_desc">Bitte wähle deine Stufe aus</string>
-    <string name="preference_class">Klasse</string>
-
-    <string name="version">2.1.0</string>
-    <integer name="versionNumber">15</integer>
-
-    <string name="action_done">FERTIG</string>
+    <string name="settings_past_days_title">Alte Tage zeigen</string>
+    <string name="settings_past_days_summary">Sollen vergangene Tage noch angezeigt werden?</string>
 
     <string name="colored_cards_title">Farbige Karten</string>
     <string name="colored_cards_summary">Ausfälle in Übersicht farbig anzeigen</string>
 
     <string name="settings_app_color_title">Farbgebung</string>
     <string name="settings_app_color_summary">Wähle die Farbe der App</string>
+    <!--  -->
 
-    <string name="settings_past_days_title">Alte Tage zeigen</string>
-    <string name="settings_past_days_summary">Sollen vergangene Tage noch angezeigt werden?</string>
-
-    <string name="settings_dialog_back">Zurück!</string>
-    <string name="settings_dialog_title">Intervall</string>
 
     <!-- Not Added yet :( -->
     <string name="cancelled">Entfällt</string>
     <string name="representation">Vertretung</string>
     <!--  -->
-    <string name="settings_name">Einstellungen</string>
-    <string name="settings_saved">Einstellungen übernommen!</string>
 
-    <string name="no_information_card">Keine Informationen!</string>
-    <string name="placeholder_title">Titel</string>
-    <string name="placeholder_summary">Summary</string>
-
-    <string name="infoTitle">Info</string>
 
     <string-array name="Klassenstufe_List">
         <item>5</item>
