TASK: Add new toast for NullPointerException
In MainActivity. Also refactor getString, because Toast can take
ressource as argument

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="settings_name">Einstellungen</string>
     <string name="toast_settings_saved">Einstellungen übernommen!</string>
     <string name="toast_noInternetConnection">Keine Internetverbindung!</string>
+    <string name="toast_errorOccurred">Ein Fehler ist aufgetreten!</string>
 
     <!-- Class SettingsActivity Section -->
     <string name="settings_section_class">Klasse</string>
