--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="lastChecked">Zuletzt aktualisiert: %s</string>
     <string name="infoTitle">Info</string>
     <string name="card_no_information">Keine Ausfälle!</string>
+    <string name="no_data_to_display">Es liegen keine Daten vor!\n\n¯\\_(ツ)_/¯</string>
 
     <!-- Intro Slides Strings -->
     <string name="slide_welcome_title">Willkommen</string>
