--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,8 +67,13 @@
 
     <string name="notification_cancellations_title">MGG Vertretungsplan</string>
     <string name="notification_cancellations_ticker">Stundenplan Änderung!</string>
-    <string name="notification_cancellations_infoOne">"Eine Änderung!"</string>
-    <string name="notification_cancellations_infoMany">"%s Änderungen!"</string>
+    <string name="notification_cancellations_infoOne">Eine Änderung!</string>
+    <string name="notification_cancellations_infoMany">%s Änderungen!</string>
+
+    <plurals name="notification_cancellations_info">
+        <item quantity="one">%d Änderung!</item>
+        <item quantity="many">%s Änderungen!</item>
+    </plurals>
 
     <string-array name="ClassLayer_List">
         <item>5</item>
