TASK: Add strings for new setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,11 +48,15 @@
     <string name="settings_notification_interval_dialog_title">Intervall</string>
     <string name="settings_notification_interval_dialog_back">Zurück!</string>
 
+    <string name="settings_section_display">Anzeige</string>
     <string name="settings_past_days_title">Alte Tage zeigen</string>
     <string name="settings_past_days_summary">Sollen vergangene Tage noch angezeigt werden?</string>
 
     <string name="colored_cards_title">Farbige Karten</string>
     <string name="colored_cards_summary">Ausfälle in Übersicht farbig anzeigen</string>
+
+    <string name="settings_weekIndicator_title">A/B Woche</string>
+    <string name="settings_weekIndicator_summary">Aktuelle Woche (A/B) anzeigen</string>
 
     <string name="settings_app_color_title">Farbgebung</string>
     <string name="settings_app_color_summary">Wähle die Farbe der App</string>
