--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="card_no_information">Keine Ausfälle!</string>
     <string name="no_data_to_display">Es liegen keine Daten vor!\n\n¯\\_(ツ)_/¯</string>
     <string name="no_url_to_open">Keine URL zum öffnen!</string>
+    <string name="AB_week_default">A</string>
 
     <!-- Intro Slides Strings -->
     <string name="slide_welcome_title">Willkommen</string>
